--- a/Backend/package.json
+++ b/Backend/package.json
@@ -5,8 +5,12 @@
   "type": "module",
   "main": "server.js",
   "scripts": {
+    "start": "node server.js",
     "dev": "nodemon server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "npm i",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "client-install": "cd client && npm install",
+    "client-build": "cd client && npm run build"
   },
   "keywords": [
     "backend",
