--- a/Client/package.json
+++ b/Client/package.json
@@ -7,13 +7,13 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview",
-    "host": "vite --host"
+    "host": "vite preview"
   },
   "dependencies": {
     "@fortawesome/react-fontawesome": "^0.2.2",
     "axios": "^1.8.4",
     "bootstrap": "^5.3.3",
+    "firebase": "^11.6.0",
     "react": "^19.1.0",
     "react-bootstrap": "^2.10.9",
     "react-dom": "^19.1.0",
